--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "neos/flow": "~6.0",
+        "neos/flow": "^7.0",
         "guzzlehttp/guzzle": "^6.3",
         "flownative/oauth2-client": "^2.0",
         "phpseclib/phpseclib": "^2.0",
