--- a/Configuration/Settings.Http.yaml
+++ b/Configuration/Settings.Http.yaml
@@ -1,6 +1,12 @@
 Neos:
   Flow:
     http:
+
+      middlewares:
+        'Flownative.OpenIdConnect.Client:setJwtCookie':
+          position: 'after session'
+          middleware: 'Flownative\OpenIdConnect\Client\Http\Middleware\SetJwtCookieMiddleware'
+
       chain:
         'postprocess':
           chain:
